# abc-sis

./: .gitignore  .pre-commit-config.yaml  AirQualityOpenData_API-to-csv.ipynb  AirQualityOpenData_API-to-csv.py  AirQualityOpenData_API_dump.csv  AirUtah_API_dump.csv  README.md  air.utah.gov_API-to-csv.ipynb  aqi_data.csv  aqi_data_v2.csv  aqi_data_v3.csv  aqi_data_v4.csv  aqi_data_v5.csv  aqi_data_v6.csv  aqi_data_v7.csv  aqi_scraper - Copy.py  aqi_scraper.py  pyproject.toml  ruff.toml  scrape.py
.github/.workflows/: aqi_data.yml
.github/workflows/: AirUtah_data_api.yml  aq_open_data_api.yml  aqi_data.yml
