[project]
name = "abc-sis"
version = "0.2.0"
description = "Converts csv data from OmniSense to a format acceptable for PNNL ingestor."
readme = "README.md"
requires-python = ">=3.12, <=3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "pre-commit>=4.0.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./"]
